--- a/ml/0_basic_information_theory.ipynb
+++ b/ml/0_basic_information_theory.ipynb
@@ -56,9 +56,22 @@
     "\n",
     "And we have the equivalent of Bayes' rule:\n",
     "\n",
-    "&emsp; $H[X,Y] = H[X|Y] + H[Y] = H[Y|X] + H[X]$\n",
+    "&emsp; $H[X,Y] = H[X|Y] + H[Y] = H[Y|X] + H[X]$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
     "\n",
-    "The entropy is **not defined for probability densities** (check [this link](https://en.wikipedia.org/wiki/Entropy_(information_theory)#Extending_discrete_entropy_to_the_continuous_case))."
+    "### Differential entropy\n",
+    "\n",
+    "For **continuous random variables** with **probability densities**, we define the notion of differential entropy, which is the generalization of the entropy for discrete random variables:\n",
+    "\n",
+    "&emsp; $\\displaystyle h(X) = - \\int_{-\\infty}^{\\infty} p(x) \\log p(x) \\, dx$\n",
+    "\n",
+    "The differential entropy **lacks a lot of the properties of the discrete Shannon entropy**. In particular, it can be negative. Check [this link](https://en.wikipedia.org/wiki/Entropy_(information_theory)#Extending_discrete_entropy_to_the_continuous_case) for more information."
    ]
   },
   {
