--- a/ml/0_basic_distribution_gaussian.ipynb
+++ b/ml/0_basic_distribution_gaussian.ipynb
@@ -360,9 +360,9 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Conditional gaussian does not mean multivariate gaussian\n",
+    "### Warning: conditional gaussians do not mean multivariate gaussian\n",
     "\n",
-    "Event through $p(x|y)$ and $p(y|x)$ are both gaussian, it does not mean that the joint distribution $p(x,y)$ is multivariate gaussian:\n",
+    "Event when $p(x|y)$ and $p(y|x)$ are both gaussian, it does not mean that the joint distribution $p(x,y)$ is a multivariate gaussian:\n",
     "\n",
     "&emsp; $\\displaystyle p(x,y) = Z^{-1} e^{-x^2 y^2}$"
    ]
@@ -373,10 +373,50 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Multiple data points\n",
+    "# Independent gaussian sampled data points\n",
     "---\n",
     "\n",
+    "\n",
+    "\n",
     "* independence => covariance matrix of the form $\\alpha^{-1} I_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Independent and identically distributed points\n",
+    "\n",
+    "Say we have sampled $D$ independent data points $x_1 \\dots x_D$ from a univariate gaussian distrubtion $p(x) = \\mathcal{N}(x|\\mu,\\sigma^2)$, we can see their joint distribution as a multivariate gaussian with a diagonal covariance matrix:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x_1 \\dots x_D) = \\mathcal{N}(x|\\mu,\\sigma^2 I_D)$\n",
+    "\n",
+    "The proof only requires to rearange the terms a little bit:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x_1 \\dots x_D) = \\prod p(x_i) = \\frac{1}{(2 \\pi \\sigma^2)^{D/2}} e^{-\\frac{1}{2 \\sigma^2} \\sum_i (x_i-\\mu)^2} = \\frac{1}{(2 \\pi \\sigma^2)^{D/2}} e^{-\\frac{1}{2} \\sum_i (x_i-\\mu) \\sigma^{-2} (x_i-\\mu) }$\n",
+    "\n",
+    "The same can be done for multivariate gaussians, in which the covariance matrix is replicated along the diagonal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Independent but not identically distributed\n",
+    "\n",
+    "If we sample $D$ data points $x_1 \\dots x_D$ from $D$ univaritate gaussian distributions of the form $\\mathcal{N}(x_i|\\mu_i,\\sigma_i^2)$, we can see their joint distribution as a multivariate gaussian with a diagonal covariance matrix:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x_1 \\dots x_D) = \\mathcal{N}(x|\\mu,\\Sigma)$\n",
+    "&emsp; where\n",
+    "&emsp; $\\mu = \\begin{pmatrix} \\mu_1 \\\\ \\vdots \\\\ \\mu_D \\end{pmatrix}$\n",
+    "&emsp; and\n",
+    "&emsp; $\\Sigma = \\begin{pmatrix} \\sigma_1^2 & \\dots & 0 \\\\ \\vdots & & \\vdots \\\\ 0 & \\dots & \\sigma_D^2 \\end{pmatrix}$\n",
+    "\n",
+    "One way to interprete this is that a multivariate gaussian distribution can always be seen, once the covariance matrix is diagonalized, as independent gaussian distributions multiplied toegether."
    ]
   },
   {
