Basics of Gaussians

--- a/ml/0_basic_distribution_gaussian.ipynb
+++ b/ml/0_basic_distribution_gaussian.ipynb
@@ -188,16 +188,13 @@
     "\n",
     "The formula for a multivariate Gaussian (or normal) distribution:\n",
     "\n",
-    "&emsp; $\\boxed{\\mathcal{N}(x|\\mu,\\Sigma) = \\frac{1}{(2 \\pi \\vert \\Sigma \\vert)^{D/2}} e^{\\textstyle - \\frac{1}{2} (x-\\mu)^T \\Sigma^{-1} (x - \\mu)}}$\n",
+    "&emsp; $\\boxed{\\mathcal{N}(x|\\mu,\\Sigma) = \\frac{1}{(2 \\pi)^{D/2} \\vert \\Sigma \\vert^{1/2}} e^{\\textstyle - \\frac{1}{2} (x-\\mu)^T \\Sigma^{-1} (x - \\mu)}}$\n",
     "&emsp; where\n",
     "&emsp; $\\mathbb{E}[x] = \\mu$\n",
     "&emsp; and\n",
     "&emsp; $\\mathbb{V}[x] = \\Sigma = L^{-1}$\n",
     "\n",
-    "Knowing the mean $\\mu$ and covarance matrix $\\Sigma$ (or alternatively the precision matrix $L$) of a gaussian distribution is enough to completely characterize the distribution. The mean is also the mode (the highest value of the distribution):\n",
-    "\n",
-    "* The precision matrix $\\Lambda = L^{-1}$ should be symmetric and positive definite ($\\forall x, x^T L x \\ge 0$)\n",
-    "* The covariance matrix $\\Sigma$ should therefore also be symmetric and positive definite ($\\forall x, x^T \\Sigma x \\ge 0$)"
+    "Knowing the mean $\\mu$ and covarance matrix $\\Sigma$ (or alternatively the precision matrix $L$) of a gaussian distribution is enough to completely characterize the distribution. The mean is also the mode (the highest value of the distribution). The covariance matrix $\\Sigma$ (and therefore the corresponding symmetric matrix) should be **symmetric and positive definite**: $\\forall x, x^T \\Sigma x \\ge 0$."
    ]
   },
   {
@@ -216,6 +213,25 @@
     "* The higher the determinant of the precision $\\beta$, the smaller the variance $\\vert \\Sigma \\vert$, the more centralized the distribution is\n",
     "\n",
     "From this decomposition, we see that the shape of the level curves of this distribution are always one of concentric ellipsis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Link with inner product\n",
+    "\n",
+    "The covariance matrix should be symmetric and definite positive:\n",
+    "\n",
+    "&emsp; $x^T \\Sigma x \\ge 0$\n",
+    "&emsp; and\n",
+    "&emsp; $x^T \\Sigma x = 0 \\iff x = 0$\n",
+    "&emsp; and\n",
+    "&emsp; $x^T \\Sigma y = y^T \\Sigma x$\n",
+    "\n",
+    "These are the characteristics of an **inner product** in a finite space, where the matrix $\\Sigma$ encodes the inner product in the base in which $x$ and $y$ above are encoded. $x^T \\Sigma x$ therefore corresponds to a squared **norm**, alternatively a squared **distance to** $\\mu$."
    ]
   },
   {
@@ -271,6 +287,17 @@
     "* the variance of $a$ knowing $b$ is the variance of $a$ reduced by what we know about $b$ (same kind of formula as the correlation)\n",
     "\n",
     "We see that this formula is **reminiscent of the formula for the product of two gaussians, where one gaussian is linearly dependent on the value of the other gaussian**. And this should not be surprising since the gaussians are ellipsis: we can see them in the light of spectral decompositon as linear correlations between dimensions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Bayes' theorem for Gaussians\n",
+    "\n",
+    "* **todo**"
    ]
   },
   {
@@ -364,7 +391,9 @@
     "\n",
     "Event when $p(x|y)$ and $p(y|x)$ are both gaussian, it does not mean that the joint distribution $p(x,y)$ is a multivariate gaussian:\n",
     "\n",
-    "&emsp; $\\displaystyle p(x,y) = Z^{-1} e^{-x^2 y^2}$"
+    "&emsp; $\\displaystyle p(x,y) = Z^{-1} e^{-x^2 y^2}$\n",
+    "\n",
+    "So a multivariate can depose in conditional distributions that are gaussians, but the opposite is not true."
    ]
   },
   {
@@ -373,12 +402,8 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Independent gaussian sampled data points\n",
-    "---\n",
-    "\n",
-    "\n",
-    "\n",
-    "* independence => covariance matrix of the form $\\alpha^{-1} I_n$"
+    "# Combinations of independent gaussians\n",
+    "---"
    ]
   },
   {
@@ -427,6 +452,67 @@
     "\n",
     "# Conjugate priors\n",
     "---\n",
+    "\n",
+    "The conjugate prior of a distribution is prior on the parameters of the distribution that is such that when we multiply the distribution with its conjugate prior, the resulting distribution keeps the shape of the conjugate prior: the **closure property**.\n",
+    "\n",
+    "Wikipedia keep a [table of the conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior#Table_of_conjugate_distributions)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Priors on Mean\n",
+    "\n",
+    "If we have a gaussian distribution, whose mean $\\mu$ is unknown, the conjugate prior is another gaussian on $\\mu$.\n",
+    "\n",
+    "&emsp; $p(x|\\mu) = \\mathcal{N}(x|\\mu,\\sigma^2)$\n",
+    "&emsp; and\n",
+    "&emsp; $p(\\mu) = \\mathcal{N}(\\mu|\\mu_0,\\lambda)$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle p(\\mu|D) \\propto p(D|\\mu) p(\\mu)$\n",
+    "&emsp; is also gaussian\n",
+    "\n",
+    "We will first start with a basic example to show how it behaves on an intuition level, before giving the general formula. Let us take a prior on $\\mu$ with variance 1 and mean $a$ and a likelihood of $\\mu$ given the data points $x_i$, with the same variance $\\mu$:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(D|\\mu) p(\\mu) = K e^{- \\frac{1}{2} \\psi(x)}$\n",
+    "&emsp; where\n",
+    "&emsp; $\\displaystyle \\psi(x) = - \\sum_i (x_i - \\mu)^2 - (\\mu - a)^2$\n",
+    "\n",
+    "The function $\\psi(x)$ is a kind of **energy function**: minimizing it increases the MAP probability and therefore corresponds to the optimal configuration of the system. This energy function greatly looks what we get when applying **weight decay** (with $a$ being 0 in such case).\n",
+    "\n",
+    "&emsp; $\\displaystyle \\psi(x) = \\sum_i x_i^2 + a^2 + (N+1) \\mu^2 - 2 \\mu \\big(\\sum_i x_i + a \\big)$\n",
+    "\n",
+    "&emsp; $\\displaystyle \\psi(x) = (N+1)\\Big(\\mu - \\big(\\frac{1}{N+1}\\sum_i x_i + a\\big)\\Big)^2 + const$\n",
+    "\n",
+    "We therefore see that the prior has the effect of **adding** a new data point:\n",
+    "\n",
+    "* we see $a$ appear in the sample average of the data points\n",
+    "* we see $+1$ appears in the variance (normally, the variance would be $N \\sigma^2$ for $N$ data points)\n",
+    "\n",
+    "The complete formulas are a bit harder because of the variances that are in general different between the likelihood and the prior: this puts more on less emphasis of the *prior* and acts as more or less data point. These formulas are available in the [table of the conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior#Table_of_conjugate_distributions)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Priors on Variance\n",
+    "\n",
+    "* todo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Priors on Mean and Variance\n",
     "\n",
     "* todo"
    ]
