--- a/ml/4_gaussian_processes_and_svm.ipynb
+++ b/ml/4_gaussian_processes_and_svm.ipynb
@@ -193,6 +193,32 @@
    "source": [
     "<br>\n",
     "\n",
+    "### Link with inner product\n",
+    "\n",
+    "The Gram matrix $K$ is symmetric and positive definite. It thereform defines a bilinear form $x, y \\mapsto x^T K y$ that corresponds to a **inner product**. We can therefore see $K^{-1}$, also positive definite as a way to defined a inner product between $t$ and $k(x)$:\n",
+    "\n",
+    "* $t$ corresponds to the values $t_n$ at the point that perfectly align to the $\\phi(x_n)$\n",
+    "* $k(x)$ colinear to $t$ would mean that all $t_n$ are added, but this can't happens as the projection of $x$ cannot match all data points\n",
+    "\n",
+    "We can **diagonalize** $K^{-1} = U \\Lambda U^T$ with $U$ orthogonal because $K$ is symmetric:\n",
+    "\n",
+    "&emsp; $x^T U \\Lambda U^T y$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\hat{x}^T \\Lambda \\hat{y}$\n",
+    "&emsp; where\n",
+    "&emsp; $\\hat{x} = U^T x$\n",
+    "&emsp; and\n",
+    "&emsp; $\\hat{y} = U^T y$\n",
+    "\n",
+    "Which means that $x = U \\hat{x}$ and $y = U \\hat{y}$, and that consequently, $\\hat{x}$ and $\\hat{y}$ are the vectors $x$ and $y$ expressed in the basis $U$. We therefore see that this inner product is a \"normal\" dot product, only that it is scaled differently along dimensions (more emphasis is put in some direction)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "# Gaussian processes\n",
     "---\n",
     "\n",
