--- a/ml/0_basic_linear_algebra.ipynb
+++ b/ml/0_basic_linear_algebra.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Column and row spaces\n",
+    "# Column space & matrix multiplication\n",
     "---\n",
     "\n",
     "<br>\n",
@@ -64,73 +64,6 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Dual Space / Row space\n",
-    "\n",
-    "Formally, given a vector space $V$, its dual space $V^*$ is the space of the linear transformations $L(V,\\mathcal{R})$ from $V$ to $\\mathcal{R}$. This dual space is also a linear space, and has the same dimensionality as $V$:\n",
-    "\n",
-    "&emsp; $\\{x_n\\}$ basis of $V \\implies \\{w_n\\}$ basis of $V^*$\n",
-    "&emsp; where\n",
-    "&emsp; $w_j(x_i) = \\delta_{ij}$\n",
-    "\n",
-    "In the specific case of finite space $V$, **linear transformations** from $V = \\mathcal{R}^N$ to $\\mathcal{R}$ of $V^*$ can be encoded as matrices $(1,N)$, that is as **row vectors**, while elements from the vector space $V$ are encoded as column vectors. We can therefore see the dual space of the row space as being the column space (and inversely) and a basis of a row space as being a basis of the dual space.\n",
-    "\n",
-    "Let us compute the basis $W^T = (w_1, w_2, w_3)$ of the dual space $V^*$ of the vector space spanned by $V = (v_1, v_2, v_3)$:\n",
-    "\n",
-    "&emsp; $V = \\begin{pmatrix} 1 & 0 & 1 \\\\ 1 & 1 & 0 \\\\ 0 & 1 & 1 \\end{pmatrix}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $w_1^T V = \\begin{pmatrix} 1 & 0 & 0 \\end{pmatrix}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $W V = \\begin{pmatrix} w_1^T \\\\ w_2^T \\\\ w_3^T \\end{pmatrix} V = I$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $W = V^{-1}$\n",
-    "\n",
-    "The basis of the dual space of $V$ is therefore the collection of row vectors $W$ such that $W = V^{-1}$, which is basically the definition imposed by $w_j(x_i) = \\delta_{ij}$, which is basically the recipe for an identity matrix. We can also see from this definition that **the dual basis of an orthogonal basis $V$ are the row vectors $V^T$**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.5 -0.5  0.5]\n",
-      " [ 0.5  0.5 -0.5]\n",
-      " [-0.5  0.5  0.5]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "A = np.array([\n",
-    "    [1, 0, 1],\n",
-    "    [1, 1, 0],\n",
-    "    [0, 1, 1]])\n",
-    "\n",
-    "W = np.linalg.inv(A.T)\n",
-    "print(W)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Note:** We could also solve for the system by Gaussian eliminiation for $V^T W^T = I$:\n",
-    "\n",
-    "&emsp; $V^T w_i = \\begin{pmatrix} 1 & 1 & 0 \\\\ 0 & 1 & 1 \\\\ 1 & 0 & 1 \\end{pmatrix} \\begin{pmatrix} x \\\\ y \\\\ z \\end{pmatrix} = \\begin{pmatrix} a \\\\ b \\\\ c \\end{pmatrix}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $\\begin{pmatrix} 1 & 1 & 0 \\\\ 0 & 1 & 1 \\\\ 0 & 0 & 2 \\end{pmatrix} \\begin{pmatrix} x \\\\ y \\\\ z \\end{pmatrix} = \\begin{pmatrix} a \\\\ b \\\\ c-a+b \\end{pmatrix}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $W^T = \\begin{pmatrix} 0.5 & -0.5 & 0.5 \\\\ 0.5 & 0.5 & -0.5 \\\\ -0.5 & 0.5 & 0.5 \\end{pmatrix}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
     "### Change of basis\n",
     "\n",
     "Vectors are abstract entities, but we often represent them as a list of numbers, which highly depend on the choice of basis. The same goes for linear transformations $\\phi(x): \\mathbb{R}^n \\mapsto \\mathbb{R}^m$, which can be encoded as a matrix $A \\in \\mathbb{R}^{m \\times n}$ in a specific basis.\n",
@@ -159,18 +92,8 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Matrix identities\n",
-    "---\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "### Useful multiplications\n",
-    "\n",
-    "&emsp; $X = \\begin{pmatrix} x_1^T \\\\ x_2^T \\\\ ... \\\\ x_n^T \\end{pmatrix} = \\text{design matrix} \\in \\mathcal{R}^{n \\times p}$\n",
-    "\n",
-    "&emsp; $\\displaystyle X^T X = \\sum x_n x_n^T = \\text{covariance matrix} \\in \\mathcal{R}^{p \\times p} = \\text{all dimensions against each other for each sample}$\n",
-    "\n",
-    "&emsp; $(X X^T)_{ij} = x_i^T x_j = \\text{kernel / similarly matrix} \\in \\mathcal{R}^{n \\times n} = \\text{all samples against each other}$"
+    "# Row space and inner products\n",
+    "---"
    ]
   },
   {
@@ -179,33 +102,47 @@
    "source": [
     "<br>\n",
     "\n",
-    "### Pseudo-inverse of a matrix\n",
+    "### Dual Space / Row space\n",
     "\n",
-    "If a matrix has more rows that it has columns, we can define what we call its **left pseudo-inverse**:\n",
+    "Formally, given a vector space $V$, its dual space $V^*$ is the **space of the linear transformations** $L(V,\\mathbb{R})$ from $V$ to $\\mathbb{R}$. This dual space is also a linear space, and has the same dimensionality as $V$:\n",
     "\n",
-    "&emsp; $A^{\\dagger} = (A^T A)^{-1} A^T$\n",
+    "&emsp; $\\{x_n\\}$ basis of $V \\implies \\{w_n\\}$ basis of $V^*$\n",
+    "&emsp; where\n",
+    "&emsp; $w_j(x_i) = \\delta_{ij}$\n",
+    "\n",
+    "Linear transformations from $\\mathbb{R}^N$ to $\\mathbb{R}$ of $V^*$ can be encoded as matrices $(1,N)$, that is as **row vectors**. We can therefore see the dual space $V^*$ as being the column space and the basis of ${w_n}$ as spanning this row space.\n",
+    "\n",
+    "&emsp; $V = \\begin{pmatrix} 1 & 0 & 1 \\\\ 1 & 1 & 0 \\\\ 0 & 1 & 1 \\end{pmatrix}$\n",
     "&emsp; $\\implies$\n",
-    "&emsp; $A^{\\dagger} A = (A^T A)^{-1} A^T A = I$\n",
-    "\n",
-    "Similarly, if a matrix has more columns that it has rows, we can define what we call its **right pseudo-inverse**:\n",
-    "\n",
-    "&emsp; $A^{\\dagger} = A^T (A A^T)^{-1}$\n",
+    "&emsp; $w_1^T V = \\begin{pmatrix} 1 & 0 & 0 \\end{pmatrix}$\n",
     "&emsp; $\\implies$\n",
-    "&emsp; $A A^{\\dagger} = A A^T (A A^T)^{-1} = I$\n",
+    "&emsp; $\\begin{pmatrix} w_1^T \\\\ w_2^T \\\\ w_3^T \\end{pmatrix} V = I$\n",
+    "&emsp; which simply translates $w_j(x_i) = \\delta_{ij}$\n",
     "\n",
-    "**The pseudo-inverse does not always exists**: the $A^T A$ and $A A^T$ matrices are square and symmetric and positive semi-definite, but might still have null eigenvalues (to see it, just multiply a column vector by a row vector, its transpose).\n",
+    "The basis of $V^*$ is therefore $W^T = (w_1, w_2, w_3)$ such that $W = V^{-1}$. Note that from $w_j(x_i) = \\delta_{ij}$, we can see that **the dual basis of an orthogonal basis $V$ are the row vectors $V^T$** since each vector satisfies $v_i^T v_j = \\delta_{ij}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
     "\n",
-    "A nice property of pseudo-inverse matricies is that **the pseudo-inverse is equal to the inverse if the inverse exists**:\n",
+    "### Dot product, Inner products and bilinear forms\n",
     "\n",
-    "&emsp; $A^{\\dagger} = (A^T A)^{-1} A^T$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $A^{\\dagger} = A^{-1} (A^T)^{-1} A^T = A^{-1}$\n",
+    "The dot product between $x$ and $y$, written $x \\cdot y$, can also be written as $x^T y$, which shows a deep connection between the row space and the column space: operations such as the dot product between two vectors in the column space, can be writen as linear operation, that is elements of the dual space (row space) and encoded as matrices.\n",
     "\n",
-    "&emsp; $A^{\\dagger} = A^T (A A^T)^{-1}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $A^{\\dagger} = A^T (A^T)^{-1} A^{-1} = A^{-1}$\n",
+    "The notion of dot product can in fact be generalized to the notion of **inner product**, noted $\\langle x, y \\rangle$. An inner product is a bilinear form, a function, linear in both its arguments, which is both:\n",
     "\n",
-    "*Link:* https://en.wikipedia.org/wiki/Moore%E2%80%93Penrose_inverse"
+    "* Symmetric: &emsp; &emsp; &emsp; $\\langle x, y \\rangle = \\langle y, x \\rangle$\n",
+    "* Positive definite: &emsp; $\\, \\langle x, x \\rangle \\ge 0$ and $\\langle x, x \\rangle = 0 \\iff x = 0$\n",
+    "\n",
+    "Bilinear forms can be encoded as **symmetric positive definite matrices**  $\\langle x, y \\rangle = x^T S y$:\n",
+    "\n",
+    "* Symmetric: &emsp; &emsp; &emsp; $x^T S y = y^T S x \\implies S = S^T$\n",
+    "* Positive definite: &emsp; $\\, x^T S x \\ge 0$ and $x^T S x = 0 \\iff x = 0$\n",
+    "\n",
+    "The dot product is itself a very specific form of inner product in which the matrix is the identity matrix. These matrices also correspond to what we call **energy functions** in physics and in probabilities."
    ]
   },
   {
@@ -275,6 +212,61 @@
    "metadata": {},
    "source": [
     "**todo - show the interpretation as column vectors, see: https://www.youtube.com/watch?v=or6C4yBk_SY**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Matrix identities\n",
+    "---\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Useful multiplications\n",
+    "\n",
+    "&emsp; $X = \\begin{pmatrix} x_1^T \\\\ x_2^T \\\\ ... \\\\ x_n^T \\end{pmatrix} = \\text{design matrix} \\in \\mathcal{R}^{n \\times p}$\n",
+    "\n",
+    "&emsp; $\\displaystyle X^T X = \\sum x_n x_n^T = \\text{covariance matrix} \\in \\mathcal{R}^{p \\times p} = \\text{all dimensions against each other for each sample}$\n",
+    "\n",
+    "&emsp; $(X X^T)_{ij} = x_i^T x_j = \\text{kernel / similarly matrix} \\in \\mathcal{R}^{n \\times n} = \\text{all samples against each other}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Pseudo-inverse of a matrix\n",
+    "\n",
+    "If a matrix has more rows that it has columns, we can define what we call its **left pseudo-inverse**:\n",
+    "\n",
+    "&emsp; $A^{\\dagger} = (A^T A)^{-1} A^T$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $A^{\\dagger} A = (A^T A)^{-1} A^T A = I$\n",
+    "\n",
+    "Similarly, if a matrix has more columns that it has rows, we can define what we call its **right pseudo-inverse**:\n",
+    "\n",
+    "&emsp; $A^{\\dagger} = A^T (A A^T)^{-1}$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $A A^{\\dagger} = A A^T (A A^T)^{-1} = I$\n",
+    "\n",
+    "**The pseudo-inverse does not always exists**: the $A^T A$ and $A A^T$ matrices are square and symmetric and positive semi-definite, but might still have null eigenvalues (to see it, just multiply a column vector by a row vector, its transpose).\n",
+    "\n",
+    "A nice property of pseudo-inverse matricies is that **the pseudo-inverse is equal to the inverse if the inverse exists**:\n",
+    "\n",
+    "&emsp; $A^{\\dagger} = (A^T A)^{-1} A^T$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $A^{\\dagger} = A^{-1} (A^T)^{-1} A^T = A^{-1}$\n",
+    "\n",
+    "&emsp; $A^{\\dagger} = A^T (A A^T)^{-1}$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $A^{\\dagger} = A^T (A^T)^{-1} A^{-1} = A^{-1}$\n",
+    "\n",
+    "*Link:* https://en.wikipedia.org/wiki/Moore%E2%80%93Penrose_inverse"
    ]
   },
   {
