--- a/ml/0_basic_linear_algebra.ipynb
+++ b/ml/0_basic_linear_algebra.ipynb
@@ -130,7 +130,9 @@
     "\n",
     "### Dot product, Inner products and bilinear forms\n",
     "\n",
-    "The dot product between $x$ and $y$, written $x \\cdot y$, can also be written as $x^T y$, which shows a deep connection between the row space and the column space: operations such as the dot product between two vectors in the column space, can be writen as linear operation, that is elements of the dual space (row space) and encoded as matrices.\n",
+    "The dot product between $x$ and $y$, written $x \\cdot y$, can also be written as $x^T y$, which shows a deep connection between the row space and the column space: operations such as the dot product between two vectors in the column space, can be writen as linear operation, that is elements of the dual space (row space) and encoded as $\\mathbb{R}^{1 \\times n}$ matrices.\n",
+    "\n",
+    "Similarly, **matrices can be views as a stack of dot products** each applied on the input vector. This view is the one that is used to define the matrix multiplication as $y_i = \\sum_i a_{ij} x_j$. This view is also useful when taking about the Jacobian of a matrix.\n",
     "\n",
     "The notion of dot product can in fact be generalized to the notion of **inner product**, noted $\\langle x, y \\rangle$. An inner product is a bilinear form, a function, linear in both its arguments, which is both:\n",
     "\n",
@@ -142,7 +144,20 @@
     "* Symmetric: &emsp; &emsp; &emsp; $x^T S y = y^T S x \\implies S = S^T$\n",
     "* Positive definite: &emsp; $\\, x^T S x \\ge 0$ and $x^T S x = 0 \\iff x = 0$\n",
     "\n",
-    "The dot product is itself a very specific form of inner product in which the matrix is the identity matrix. These matrices also correspond to what we call **energy functions** in physics and in probabilities."
+    "The dot product is itself a very specific form of inner product in which the matrix is the identity matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### N-linear forms?\n",
+    "\n",
+    "A dot product $x \\cdot y$ can be viewed as a linear form taking $y$ and returning $x^T y$. It can also be viewed as a bilinear form taking $x$ and $y$ and returning $x^T I y$. The concept can be generalized for N-arry forms, if we replace 2-dimensional matrices by N-dimensional *tensor* (where tensor here just means multi-dimentional arrays).\n",
+    "\n",
+    "For instance, a trilinear form could be encoded as $A \\in \\mathbb{R}^{N \\times N \\times N}$, but there would not be a nice matrix multiplication formulation to easily write it. We could also generalize it as $A \\in \\mathbb{R}^{M \\times N \\times P}$."
    ]
   },
   {
